# bzlq

./: .gitignore  .rustfmt.toml  Cargo.toml  build.rs  fetch_protos.nu
bzlq/: Cargo.toml  build.rs
bzlq-cli/: Cargo.toml
bzlq-cli/src/: main.rs
bzlq-cli/src/bazel/: analysis_v2.rs  build.rs  mod.rs
bzlq-cli/src/handler/: request.rs
bzlq-cli/src/protos/: bzlq.rs  mod.rs
bzlq/src/: lib.rs
protos/: bzlq.proto
src/: main.rs
