[package]
name = "bzlq-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bzlq"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.2.7", features = ["derive"] }
protobuf = "3.2.0"
regex = "1.8.1"
bzlq = { path = "../bzlq" }
lsp-server = "0.7.2"
lsp-types = "0.94.0"
serde_json = "1.0.103"

[build-dependencies]
protobuf-codegen = "3.2.0"
protoc-bin-vendored = "3.0.0"
